--- a/index.html
+++ b/index.html
@@ -4,91 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu Catálogo de Filmes e Séries</title>
-    <style>
-        /* Estilos CSS básicos para o site */
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            background-color: #f0f2f5;
-            color: #333;
-        }
-
-        .header {
-            background-color: #222;
-            color: white;
-            padding: 20px;
-            text-align: center;
-        }
-
-        .nav {
-            background-color: #333;
-            overflow: hidden;
-            text-align: center;
-        }
-
-        .nav a {
-            display: inline-block;
-            color: white;
-            text-align: center;
-            padding: 14px 20px;
-            text-decoration: none;
-        }
-
-        .nav a:hover {
-            background-color: #575757;
-        }
-
-        .container {
-            padding: 20px;
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            gap: 20px;
-        }
-
-        .card {
-            background-color: white;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            overflow: hidden;
-            width: 300px;
-            text-align: center;
-            transition: transform 0.2s;
-        }
-
-        .card:hover {
-            transform: translateY(-5px);
-        }
-
-        .card img {
-            width: 100%;
-            height: auto;
-            display: block;
-        }
-
-        .card-content {
-            padding: 15px;
-        }
-
-        .card-content h3 {
-            margin: 0 0 10px;
-        }
-
-        .card-content p {
-            font-size: 14px;
-            color: #666;
-        }
-
-        .footer {
-            background-color: #222;
-            color: white;
-            text-align: center;
-            padding: 10px;
-            position: relative;
-            bottom: 0;
-            width: 100%;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -122,7 +38,7 @@
                 <p>Uma breve descrição da série que faz com que as pessoas queiram assistir.</p>
             </div>
         </div>
-
+        
         <div class="card">
             <img src="https://via.placeholder.com/300x450" alt="Pôster do Filme 2">
             <div class="card-content">
