--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <main class="container">
         <div class="card">
-            <img src="https://via.placeholder.com/300x450" alt="Pôster do Filme 1">
+            <img src="https://uauposters.com.br/media/catalog/product/2/5/258820220222-uau-posters-the-batman-filmes-1.jpg" alt="Pôster do Filme 1">
             <div class="card-content">
                 <h3>Título do Filme 1</h3>
                 <p>Ano: 2023 | Gênero: Ação</p>
