--- a/index.html
+++ b/index.html
@@ -21,30 +21,33 @@
     </nav>
 
     <main class="container">
+        <!-- Exemplo de Card de Filme -->
         <div class="card">
-            <img src="https://uauposters.com.br/media/catalog/product/2/5/258820220222-uau-posters-the-batman-filmes-1.jpg" alt="Pôster do Filme 1">
+            <img src="https://uauposters.com.br/media/catalog/product/2/5/258820220222-uau-posters-the-batman-filmes-1.jpg" alt="Pôster do Filme The Batman">
             <div class="card-content">
-                <h3>Título do Filme 1</h3>
-                <p>Ano: 2023 | Gênero: Ação</p>
+                <h3>The Batman</h3>
+                <p>Ano: 2022 | Gênero: Ação, Crime</p>
                 <p>Uma breve descrição do filme que cativa a atenção do espectador.</p>
             </div>
         </div>
 
+        <!-- Exemplo de Card de Série (agora um filme) -->
         <div class="card">
-            <img src="https://via.placeholder.com/300x450" alt="Pôster da Série 1">
+            <img src="https://img.elo7.com.br/product/zoom/268D494/big-poster-filme-superman-o-retorno-lo01-tamanho-90x60-cm-superman-o-retorno.jpg" alt="Pôster do Filme Super-Homem - O Retorno">
             <div class="card-content">
-                <h3>Título da Série 1</h3>
-                <p>Ano: 2022 | Gênero: Drama</p>
-                <p>Uma breve descrição da série que faz com que as pessoas queiram assistir.</p>
+                <h3>Super-Homem - O Retorno</h3>
+                <p>Ano: 2006 | Gênero: Ação, Aventura</p>
+                <p>Uma breve descrição do filme que faz com que as pessoas queiram assistir.</p>
             </div>
         </div>
         
+        <!-- Adicione mais cards aqui para mais filmes ou séries -->
         <div class="card">
-            <img src="https://via.placeholder.com/300x450" alt="Pôster do Filme 2">
+            <img src="https://img.elo7.com.br/product/zoom/2677A9D/big-poster-filme-homem-aranha-de-volta-ao-lar-lo11-90x60-cm-geek.jpg" alt="Pôster do Filme Homem-Aranha: De Volta ao Lar">
             <div class="card-content">
-                <h3>Título do Filme 2</h3>
-                <p>Ano: 2024 | Gênero: Ficção Científica</p>
-                <p>Outra descrição para um filme diferente.</p>
+                <h3>Homem-Aranha: De Volta ao Lar</h3>
+                <p>Ano: 2017 | Gênero: Ação, Aventura</p>
+                <p>Uma outra descrição para o novo filme.</p>
             </div>
         </div>
 
