--- a/index.html
+++ b/index.html
@@ -51,6 +51,17 @@
             </div>
         </div>
 
+        <!-- Card de Vídeo do YouTube -->
+        <div class="card video-card">
+            <div class="card-content">
+                <h3>Trailer Oficial</h3>
+                <!-- Aqui você pode colocar o código de incorporação de um vídeo do YouTube -->
+                <!-- Substitua o link abaixo pelo link de incorporação do vídeo que você quer exibir -->
+                <iframe width="100%" height="auto" src="https://www.youtube.com/embed/ACHhOWRed1s?si=XAKPsnbzyw9H-hKc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <p>Assista ao trailer oficial aqui.</p>
+            </div>
+        </div>
+
     </main>
 
     <footer class="footer">
