--- a/index.html
+++ b/index.html
@@ -55,10 +55,26 @@
         <div class="card video-card">
             <div class="card-content">
                 <h3>Trailer Oficial</h3>
-                <!-- Aqui você pode colocar o código de incorporação de um vídeo do YouTube -->
-                <!-- Substitua o link abaixo pelo link de incorporação do vídeo que você quer exibir -->
                 <iframe width="100%" height="auto" src="https://www.youtube.com/embed/ACHhOWRed1s?si=XAKPsnbzyw9H-hKc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 <p>Assista ao trailer oficial aqui.</p>
+            </div>
+        </div>
+
+        <!-- NOVO Card de Vídeo do YouTube 1 -->
+        <div class="card video-card">
+            <div class="card-content">
+                <h3>Divertida Mente - Trailer</h3>
+                <iframe width="100%" height="auto" src="https://www.youtube.com/embed/14qzQDMcTqM?si=M_4_ZtifIofU5gto" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <p>Assista a um segundo trailer aqui.</p>
+            </div>
+        </div>
+
+        <!-- NOVO Card de Vídeo do YouTube 2 -->
+        <div class="card video-card">
+            <div class="card-content">
+                <h3>Trailer Oficial 3</h3>
+                <iframe width="100%" height="auto" src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <p>Assista a um terceiro trailer aqui.</p>
             </div>
         </div>
 
