--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
         <div class="card video-card">
             <div class="card-content">
-                <h3>Divertida Mente - Trailer</h3>
+                <h3>SUPER HOMEN - Trailer</h3>
                 <iframe width="100%" height="auto" src="https://www.youtube.com/embed/14qzQDMcTqM?si=M_4_ZtifIofU5gto" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 <p>Assista a um segundo trailer aqui.</p>
             </div>
