--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
         <div class="card video-card">
             <div class="card-content">
-                <h3>Trailer Oficial de The Batman</h3>
+                <h3>The Batman</h3>
                 <iframe width="100%" height="auto" src="https://www.youtube.com/embed/ACHhOWRed1s?si=XAKPsnbzyw9H-hKc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 <p>Assista ao trailer oficial aqui.</p>
             </div>
