--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="card-content">
                 <h3>The Batman</h3>
                 <p>Ano: 2022 | Gênero: Ação, Crime</p>
-                <p>Uma breve descrição do filme que cativa a atenção do espectador.</p>
+                <p>No filme The Batman (2022), Bruce Wayne está em seu segundo ano como o vigilante de Gotham. A história não foca na origem do herói, mas sim em suas habilidades de detetive..</p>
             </div>
         </div>
 
