--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="card-content">
                 <h3>Super-Homem - O Retorno</h3>
                 <p>Ano: 2027 | Gênero: Ação, Aventura</p>
-                <p>Uma breve descrição do filme que faz com que as pessoas queiram assistir.</p>
+                <p> aprofundar a jornada de Clark Kent como Superman. A expectativa é que o filme explore mais a fundo sua mitologia, possivelmente apresentando uma aliança com o seu maior inimigo, Lex Luthor.</p>
             </div>
         </div>
         
