--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div class="card-content">
                 <h3>Homem-Aranha: De Volta ao Lar</h3>
                 <p>Ano: 2017 | Gênero: Ação, Aventura</p>
-                <p>Uma outra descrição para o novo filme.</p>
+                <p>Em Homem-Aranha: De Volta ao Lar (2017), o jovem Peter Parker (Tom Holland) tenta equilibrar sua vida de estudante no ensino médio com suas responsabilidades como o herói Homem-Aranha..</p>
             </div>
         </div>
 
