--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="card-content">
                 <h3>The Batman</h3>
                 <p>Ano: 2022 | Gênero: Ação, Crime</p>
-                <p>No filme The Batman (2022), Bruce Wayne está em seu segundo ano como o vigilante de Gotham. A história não foca na origem do herói, mas sim em suas habilidades de detetive..</p>
+                <p>Uma breve descrição do filme que cativa a atenção do espectador.</p>
             </div>
         </div>
 
@@ -34,8 +34,8 @@
             <img src="https://img.elo7.com.br/product/zoom/268D494/big-poster-filme-superman-o-retorno-lo01-tamanho-90x60-cm-superman-o-retorno.jpg" alt="Pôster do Filme Super-Homem - O Retorno">
             <div class="card-content">
                 <h3>Super-Homem - O Retorno</h3>
-                <p>Ano: 2027 | Gênero: Ação, Aventura</p>
-                <p> aprofundar a jornada de Clark Kent como Superman. A expectativa é que o filme explore mais a fundo sua mitologia, possivelmente apresentando uma aliança com o seu maior inimigo, Lex Luthor.</p>
+                <p>Ano: 2006 | Gênero: Ação, Aventura</p>
+                <p>Uma breve descrição do filme que faz com que as pessoas queiram assistir.</p>
             </div>
         </div>
         
@@ -44,13 +44,13 @@
             <div class="card-content">
                 <h3>Homem-Aranha: De Volta ao Lar</h3>
                 <p>Ano: 2017 | Gênero: Ação, Aventura</p>
-                <p>Em Homem-Aranha: De Volta ao Lar (2017), o jovem Peter Parker (Tom Holland) tenta equilibrar sua vida de estudante no ensino médio com suas responsabilidades como o herói Homem-Aranha..</p>
+                <p>Uma outra descrição para o novo filme.</p>
             </div>
         </div>
 
         <div class="card video-card">
             <div class="card-content">
-                <h3>THE BATMAN</h3>
+                <h3>Trailer Oficial de The Batman</h3>
                 <iframe width="100%" height="auto" src="https://www.youtube.com/embed/ACHhOWRed1s?si=XAKPsnbzyw9H-hKc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 <p>Assista ao trailer oficial aqui.</p>
             </div>
@@ -58,8 +58,7 @@
 
         <div class="card video-card">
             <div class="card-content">
-                <h3>SUPERMEN
-                </h3>
+                <h3>Divertida Mente - Trailer</h3>
                 <iframe width="100%" height="auto" src="https://www.youtube.com/embed/14qzQDMcTqM?si=M_4_ZtifIofU5gto" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 <p>Assista a um segundo trailer aqui.</p>
             </div>
@@ -67,7 +66,7 @@
 
         <div class="card video-card">
             <div class="card-content">
-                <h3>HOMEN ARANHA</h3>
+                <h3>Trailer Oficial 3</h3>
                 <iframe width="100%" height="auto" src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 <p>Assista a um terceiro trailer aqui.</p>
             </div>
