--- a/index.html
+++ b/index.html
@@ -26,16 +26,18 @@
             <div class="card-content">
                 <h3>The Batman</h3>
                 <p>Ano: 2022 | Gênero: Ação, Crime</p>
-                <p>Uma breve descrição do filme que cativa a atenção do espectador.</p>
+                <p>No filme The Batman (2022), Bruce Wayne está em seu segundo ano como o vigilante de Gotham. Ele investiga uma série de assassinatos, enquanto descobre uma rede de corrupção que assola a cidade.</p>
+                <a href="#" class="btn-assistir">Assistir Filme</a>
             </div>
         </div>
 
         <div class="card">
-            <img src="https://img.elo7.com.br/product/zoom/268D494/big-poster-filme-superman-o-retorno-lo01-tamanho-90x60-cm-superman-o-retorno.jpg" alt="Pôster do Filme Super-Homem - O Retorno">
+            <img src="https://static.wikia.nocookie.net/dcextendeduniverse/images/2/23/SupermanLegacyTeaserPoster.png/" alt="Pôster do Filme Superman Legacy">
             <div class="card-content">
-                <h3>Super-Homem - O Retorno</h3>
-                <p>Ano: 2006 | Gênero: Ação, Aventura</p>
-                <p>Uma breve descrição do filme que faz com que as pessoas queiram assistir.</p>
+                <h3>Superman: Legacy</h3>
+                <p>Ano: 2025 | Gênero: Ação, Aventura</p>
+                <p>Este filme acompanha a jornada de Clark Kent para conciliar sua herança kryptoniana com sua criação humana, explorando os desafios de ser o maior herói do mundo moderno.</p>
+                <a href="#" class="btn-assistir">Assistir Filme</a>
             </div>
         </div>
         
@@ -44,31 +46,32 @@
             <div class="card-content">
                 <h3>Homem-Aranha: De Volta ao Lar</h3>
                 <p>Ano: 2017 | Gênero: Ação, Aventura</p>
-                <p>Uma outra descrição para o novo filme.</p>
+                <p>O jovem Peter Parker tenta equilibrar sua vida escolar com o seu alter ego de Homem-Aranha, enquanto lida com um novo vilão, o Abutre. Ele precisa provar que pode ser um herói sem a ajuda dos Vingadores.</p>
+                <a href="#" class="btn-assistir">Assistir Filme</a>
             </div>
         </div>
 
         <div class="card video-card">
             <div class="card-content">
-                <h3>THE BATMAN</h3>
+                <h3>The Batman: A Vingança Chega a Gotham</h3>
                 <iframe width="100%" height="auto" src="https://www.youtube.com/embed/ACHhOWRed1s?si=XAKPsnbzyw9H-hKc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                <p>Assista ao trailer oficial aqui.</p>
+                <p>Descubra as sombras de Gotham e assista ao trailer que revela a nova era do Cavaleiro das Trevas.</p>
             </div>
         </div>
 
         <div class="card video-card">
             <div class="card-content">
-                <h3>SUPERMEN</h3>
-                <iframe width="100%" height="auto" src="https://www.youtube.com/embed/14qzQDMcTqM?si=M_4_ZtifIofU5gto" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                <p>Assista a um segundo trailer aqui.</p>
+                <h3>Superman: O Homem do Amanhã</h3>
+                <iframe width="100%" height="auto" src="https://www.youtube.com/embed/0G_l729227A?si=B5Tj2kR3wM91aYF5" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <p>Testemunhe o trailer que mostra a nova jornada do herói mais icônico do mundo, em seu caminho para se tornar o Superman.</p>
             </div>
         </div>
 
         <div class="card video-card">
             <div class="card-content">
-                <h3>HOMEN ARANHA</h3>
-                <iframe width="100%" height="auto" src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                <p>Assista a um terceiro trailer aqui.</p>
+                <h3>Homem-Aranha: O Herói Retorna</h3>
+                <iframe width="100%" height="auto" src="https://www.youtube.com/embed/xrzfC_sI_aE?si=B3m10a0L-p0zXoG_" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <p>Assista ao trailer que marca o retorno de Peter Parker e sua luta para ser um herói sem a ajuda de seus mentores.</p>
             </div>
         </div>
 
