--- a/index.html
+++ b/index.html
@@ -21,57 +21,60 @@
     </nav>
 
     <main class="container">
+        <!-- Exemplo de Card de Filme -->
         <div class="card">
             <img src="https://uauposters.com.br/media/catalog/product/2/5/258820220222-uau-posters-the-batman-filmes-1.jpg" alt="Pôster do Filme The Batman">
             <div class="card-content">
                 <h3>The Batman</h3>
                 <p>Ano: 2022 | Gênero: Ação, Crime</p>
-                <p>No filme The Batman (2022), Bruce Wayne está em seu segundo ano como o vigilante de Gotham. Ele investiga uma série de assassinatos, enquanto descobre uma rede de corrupção que assola a cidade.</p>
-                <a href="#" class="btn-assistir">Assistir Filme</a>
+                <p>Uma breve descrição do filme que cativa a atenção do espectador.</p>
             </div>
         </div>
 
+        <!-- Exemplo de Card de Série (agora um filme) -->
         <div class="card">
-            <img src="https://static.wikia.nocookie.net/dcextendeduniverse/images/2/23/SupermanLegacyTeaserPoster.png/" alt="Pôster do Filme Superman Legacy">
+            <img src="https://img.elo7.com.br/product/zoom/268D494/big-poster-filme-superman-o-retorno-lo01-tamanho-90x60-cm-superman-o-retorno.jpg" alt="Pôster do Filme Super-Homem - O Retorno">
             <div class="card-content">
-                <h3>Superman: Legacy</h3>
-                <p>Ano: 2025 | Gênero: Ação, Aventura</p>
-                <p>Este filme acompanha a jornada de Clark Kent para conciliar sua herança kryptoniana com sua criação humana, explorando os desafios de ser o maior herói do mundo moderno.</p>
-                <a href="#" class="btn-assistir">Assistir Filme</a>
+                <h3>Super-Homem - O Retorno</h3>
+                <p>Ano: 2006 | Gênero: Ação, Aventura</p>
+                <p>Uma breve descrição do filme que faz com que as pessoas queiram assistir.</p>
             </div>
         </div>
         
+        <!-- Adicione mais cards aqui para mais filmes ou séries -->
         <div class="card">
             <img src="https://img.elo7.com.br/product/zoom/2677A9D/big-poster-filme-homem-aranha-de-volta-ao-lar-lo11-90x60-cm-geek.jpg" alt="Pôster do Filme Homem-Aranha: De Volta ao Lar">
             <div class="card-content">
                 <h3>Homem-Aranha: De Volta ao Lar</h3>
                 <p>Ano: 2017 | Gênero: Ação, Aventura</p>
-                <p>O jovem Peter Parker tenta equilibrar sua vida escolar com o seu alter ego de Homem-Aranha, enquanto lida com um novo vilão, o Abutre. Ele precisa provar que pode ser um herói sem a ajuda dos Vingadores.</p>
-                <a href="#" class="btn-assistir">Assistir Filme</a>
+                <p>Uma outra descrição para o novo filme.</p>
             </div>
         </div>
 
+        <!-- Card de Vídeo do YouTube -->
         <div class="card video-card">
             <div class="card-content">
-                <h3>The Batman: A Vingança Chega a Gotham</h3>
+                <h3>Trailer Oficial</h3>
                 <iframe width="100%" height="auto" src="https://www.youtube.com/embed/ACHhOWRed1s?si=XAKPsnbzyw9H-hKc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                <p>Descubra as sombras de Gotham e assista ao trailer que revela a nova era do Cavaleiro das Trevas.</p>
+                <p>Assista ao trailer oficial aqui.</p>
             </div>
         </div>
 
+        <!-- NOVO Card de Vídeo do YouTube 1 -->
         <div class="card video-card">
             <div class="card-content">
-                <h3>Superman: O Homem do Amanhã</h3>
-                <iframe width="100%" height="auto" src="https://www.youtube.com/embed/0G_l729227A?si=B5Tj2kR3wM91aYF5" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                <p>Testemunhe o trailer que mostra a nova jornada do herói mais icônico do mundo, em seu caminho para se tornar o Superman.</p>
+                <h3>Divertida Mente - Trailer</h3>
+                <iframe width="100%" height="auto" src="https://www.youtube.com/embed/14qzQDMcTqM?si=M_4_ZtifIofU5gto" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <p>Assista a um segundo trailer aqui.</p>
             </div>
         </div>
 
+        <!-- NOVO Card de Vídeo do YouTube 2 -->
         <div class="card video-card">
             <div class="card-content">
-                <h3>Homem-Aranha: O Herói Retorna</h3>
-                <iframe width="100%" height="auto" src="https://www.youtube.com/embed/xrzfC_sI_aE?si=B3m10a0L-p0zXoG_" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                <p>Assista ao trailer que marca o retorno de Peter Parker e sua luta para ser um herói sem a ajuda de seus mentores.</p>
+                <h3>Trailer Oficial 3</h3>
+                <iframe width="100%" height="auto" src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <p>Assista a um terceiro trailer aqui.</p>
             </div>
         </div>
 
