--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
     </nav>
 
     <main class="container">
-        <!-- Exemplo de Card de Filme -->
         <div class="card">
             <img src="https://uauposters.com.br/media/catalog/product/2/5/258820220222-uau-posters-the-batman-filmes-1.jpg" alt="Pôster do Filme The Batman">
             <div class="card-content">
@@ -31,7 +30,6 @@
             </div>
         </div>
 
-        <!-- Exemplo de Card de Série (agora um filme) -->
         <div class="card">
             <img src="https://img.elo7.com.br/product/zoom/268D494/big-poster-filme-superman-o-retorno-lo01-tamanho-90x60-cm-superman-o-retorno.jpg" alt="Pôster do Filme Super-Homem - O Retorno">
             <div class="card-content">
@@ -41,7 +39,6 @@
             </div>
         </div>
         
-        <!-- Adicione mais cards aqui para mais filmes ou séries -->
         <div class="card">
             <img src="https://img.elo7.com.br/product/zoom/2677A9D/big-poster-filme-homem-aranha-de-volta-ao-lar-lo11-90x60-cm-geek.jpg" alt="Pôster do Filme Homem-Aranha: De Volta ao Lar">
             <div class="card-content">
@@ -51,29 +48,32 @@
             </div>
         </div>
 
-        <!-- Card de Vídeo do YouTube -->
         <div class="card video-card">
             <div class="card-content">
-                <h3>Trailer Oficial</h3>
-                <iframe width="100%" height="auto" src="https://www.youtube.com/embed/ACHhOWRed1s?si=XAKPsnbzyw9H-hKc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <h3>Trailer Oficial - Exemplo</h3>
+                <div class="video-responsive">
+                    <iframe src="https://www.youtube.com/embed/ACHhOWRed1s?si=XAKPsnbzyw9H-hKc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                </div>
                 <p>Assista ao trailer oficial aqui.</p>
             </div>
         </div>
 
-        <!-- NOVO Card de Vídeo do YouTube 1 -->
         <div class="card video-card">
             <div class="card-content">
                 <h3>Divertida Mente - Trailer</h3>
-                <iframe width="100%" height="auto" src="https://www.youtube.com/embed/14qzQDMcTqM?si=M_4_ZtifIofU5gto" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <div class="video-responsive">
+                    <iframe src="https://www.youtube.com/embed/14qzQDMcTqM?si=M_4_ZtifIofU5gto" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                </div>
                 <p>Assista a um segundo trailer aqui.</p>
             </div>
         </div>
 
-        <!-- NOVO Card de Vídeo do YouTube 2 -->
         <div class="card video-card">
             <div class="card-content">
                 <h3>Trailer Oficial 3</h3>
-                <iframe width="100%" height="auto" src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <div class="video-responsive">
+                    <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                </div>
                 <p>Assista a um terceiro trailer aqui.</p>
             </div>
         </div>
