--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <header class="header">
-        <h1>,moiFLIX</h1>
+        <h1>moiFLIX</h1>
         <p>Descubra os melhores títulos para assistir!</p>
     </header>
 
